--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -135,6 +135,10 @@ html {
   text-align: center;
 }
 
+.h-txt-justify {
+  text-align: justify;
+}
+
 body::-webkit-scrollbar {
   display: none;
   -ms-overflow-style: none;
