--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -653,3 +653,36 @@
     line-height: 0.8;
     padding: 16px 100px;
 }
+
+.ButtonGray {
+    background-color: var(--color-grey2);
+    cursor: default;
+}
+
+.MintModal {
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        text-align: center;
+        overflow: auto;
+        word-wrap: break-word;
+        gap: 1em;
+
+        color: var(--color-black);
+    }
+
+    &__quantity {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1em;
+    }
+
+    &__quantity__btn {
+        line-height: 0.8;
+        padding: 1em;
+    }
+}
