fix(ui): add red css

--- a/styles/_constant.scss
+++ b/styles/_constant.scss
@@ -23,6 +23,7 @@
   --color-violet1: #B7B8F6;
   --color-violet2: #775FB6;
   --color-yellow: #FFE681;
+  --color-red: #d9534f;
 
   --z-index-normal: 0;
   --z-index-medium: 1;
