--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -139,6 +139,10 @@ html {
   text-align: justify;
 }
 
+.h-txt-error {
+  color: var(--color-red);
+}
+
 body::-webkit-scrollbar {
   display: none;
   -ms-overflow-style: none;
